--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/picker": "^1.6.6",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
+    "@react-navigation/native-stack": "^5.0.5",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.19.2",
     "react": "16.13.1",
@@ -21,7 +22,8 @@
     "react-native-gesture-handler": "^1.7.0",
     "react-native-reanimated": "^1.11.0",
     "react-native-safe-area-context": "^3.1.4",
-    "react-native-screens": "^2.10.1"
+    "react-native-screens": "^2.10.1",
+    "react-navigation-stack": "^2.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
