--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "^1.11.0",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
+    "react-native-webview": "^10.7.0",
     "react-navigation-stack": "^2.8.2"
   },
   "devDependencies": {
